--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -412,7 +412,7 @@ section.video-wrapper{
 	}
 
 	&.commerceAmongst-video-mini{
-		background-image: url("https://www.fillmurray.com/1920/787");
+		background-image: url("../img/projects/commerce-amongst/09_amongst_commerce_mini_opt.jpg");
 	}
 	&.fill-mini{
 		background-image: url("https://www.fillmurray.com/1920/787");
@@ -803,7 +803,8 @@ section.footer-project{
 }
 // e-commerce falta
 .project-bg-commerce-amongst{
-	background-image: url("../img/project_2_bg.jpg");
+	// background-image: url("../img/project_2_bg.jpg");
+	background-image: url("https://www.fillmurray.com/1920/1080");
 }
 
 // Background hero image
