Projects video asset URL location fixed, it wasnt working on nested domains due to ../ command.

--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -33,9 +33,13 @@ block content
 				.p-photo2
 					img(src="./img/projects/event-amongst/4-event-amongst-photo.jpg", alt="")
 			+slider-projects("./img/projects/event-amongst/5-event-amongst-slide.jpg", "./img/projects/event-amongst/6-event-amongst-slide.jpg", "./img/projects/event-amongst/7-event-amongst-slide.jpg", "./img/projects/event-amongst/8-event-amongst-slide.jpg", "", "", "", "")
+			
+			
 			//- video
 			section.video-wrapper.eventAmongst-video-mini.snj-col-12
-				+video-player("../img/projects/event-amongst/9-event-amongst-mini.jpg","../img/projects/event-amongst/9-event-amongst-video.mp4")
+				+video-player("./img/projects/event-amongst/9-event-amongst-mini.jpg","./img/projects/event-amongst/9-event-amongst-video.mp4")
+			
+
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
