--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -38,7 +38,7 @@ block content
 
 			//- video player
 			section.video-wrapper.coffee-video-mini.snj-col-12
-				+video-player("../img/projects/coffee/9-coffee-mini.jpg","../img/projects/coffee/9-coffee-video.mp4")
+				+video-player("./img/projects/coffee/9-coffee-mini.jpg","./img/projects/coffee/9-coffee-video.mp4")
 				
 			//- footer
 			section.footer-project
