--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -41,7 +41,7 @@ block content
 			
 
 			section.video-wrapper.powerhorse-video-mini.snj-col-12
-				+video-player("./img/projects/power-horse/09_power_mini.jpg","../img/projects/power-horse/09_power.mp4")
+				+video-player("./img/projects/power-horse/09_power_mini.jpg","./img/projects/power-horse/09_power.mp4")
 			
 
 			//- footer
