--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -7,7 +7,7 @@ block content
 		.row
 			section.project-about.project-bg-suede
 				//- .background-wrapper.p-about-bg
-				+hero-project("Campaign & Social Media Strategy","Suede Guerrilla", "01")
+				+hero-project("Campaign & Social Media Strategy","Suede Guerrillas", "01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
 						.snj-row
@@ -37,7 +37,7 @@ block content
 			+slider-projects("./img/projects/suede-guerrilla/suede-slide-5.jpg", "./img/projects/suede-guerrilla/suede-slide-6.jpg", "./img/projects/suede-guerrilla/suede-slide-7.jpg", "./img/projects/suede-guerrilla/suede-slide-8.jpg", "", "", "", "")
 			//- video
 			section.video-wrapper.suede-video-mini.snj-col-12
-				+video-player("../img/projects/suede-guerrilla/suede-mini-9.jpg","../img/projects/suede-guerrilla/09_suede.mp4")
+				+video-player("./img/projects/suede-guerrilla/suede-mini-9.jpg","./img/projects/suede-guerrilla/09_suede.mp4")
 				
 			//- footer
 			section.footer-project
