--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -51,23 +51,23 @@
 }
 
 .testing{
-	position: fixed;
+	position: absolute;
 	z-index: 999999;
 	background-color: red;
 	opacity: .3;
 	pointer-events:none;
 	
 	&.a{
-		width: getvw(243vw);
-		height: 100%;
+		width: 100%;
+		height: 641px;
 
-		bottom:  0;
+		top: 0;
 		right: 0;
 	}
 	
 	&.b{
-		width: getvw(444vw);
-		height: 100%;
+		width: 100%;
+		height: 529px;
 
 		top: 0;
 		left: 0;
