--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -236,7 +236,7 @@ section.project-description{
 		width: 100%;
 		position: relative;
 	}
-	p{
+	p:not(:last-child){
 		margin-bottom: getvwmob(15vw);
 	}
 	a{
@@ -246,14 +246,15 @@ section.project-description{
 	@media(min-width: 768px){
 		background-color: #a2a7a3;
 		margin-bottom: 10px;
-		padding: 65px 0 128px;
+		padding: 65px 0 123px;
+
 		.project-title{
 			margin-top: 50px;
 			margin-bottom: 50px;
 			width: 100%;
 			position: relative;
 		}
-		p{
+		p:not(:last-child){
 			margin-bottom: 16px;
 		}
 		div{
@@ -275,12 +276,12 @@ section.project-description{
 	}
 	@media(min-width: 1282px){
 		margin-bottom: getvw(10vw);
-		padding: getvw(65vw) 0 getvw(128vw);
+		padding: getvw(65vw) 0 getvw(123vw);
 		.project-title{
 			margin-top: getvw(50vw);
 			margin-bottom: getvw(50vw);
 		}
-		p{
+		p:not(:last-child){
 			margin-bottom: getvw(16vw);
 		}
 		.paragraph-left{
