Responsive check: Contact Main ready, improved large mobile/small tablet sizes.

--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -6,7 +6,7 @@ block content
 		//- .snj-row
 		.row
 			.center-wrapper
-				a.about-block.offset-1.snj-col-10.offset-sm-2.snj-col-sm-5(href="message.html")
+				a.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5(href="message.html")
 					h2.subtitle-block.sub-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Get in touch
 
 					h2.subtitle-block.sub-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Contact Us
@@ -20,7 +20,7 @@ block content
 								+icon-arrow
 							span Drop us a line
 
-				aside.social-block.snj-col-4.offset-1.snj-col-sm-2.offset-lg-1
+				aside.social-block.snj-col-4.offset-1.snj-col-md-2.offset-lg-1
 
 					h2.subtitle-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="1") Social
 
@@ -36,7 +36,7 @@ block content
 						li.jb-cascade(data-cascade="fade-right")
 							a(href="https://www.linkedin.com/company/jungle-beige") Linkedin
 
-				aside.info-block-wrapper.snj-col-4.offset-2.snj-col-sm-9.offset-sm-1
+				aside.info-block-wrapper.snj-col-4.offset-2.snj-col-md-9.offset-md-1
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2")
 						h3 Office
 						p Dubai Design District<br> Building 7, 502A<br>Dubai, U.A.E. 
