--- a/dev/scss/views/_contact.scss
+++ b/dev/scss/views/_contact.scss
@@ -39,7 +39,8 @@
 		color: $dark-brown;
 		position: relative;
 		font-weight: 100;
-		margin-bottom: getvwmob(12vw);
+		margin-bottom: getvwmob(14vw);
+
 		@media(min-width: 576px){
 			margin-bottom: getvwmob(17vw);
 			line-height: getvwmob(22vw);
@@ -52,7 +53,7 @@
 		}
 		@media(min-width: 1282px){
 			margin-bottom: getvw(17vw);
-			line-height: getvw(22vw);
+			line-height: getvw(24vw);
 			height: getvw(19vw);
 		}
 		&.sub-1{display: block;}
@@ -79,7 +80,7 @@
 		// 	// line-height: getvwmob(13vw);
 		// 	// height: getvwmob(10vw);
 		// }
-		@media(min-width: 576px){
+		@media(min-width: 768px){
 			justify-content: flex-end;
 			padding-left: 0;
 			.arrow-right{
@@ -144,8 +145,8 @@
 		color: $dark-brown;
 		// background-color: green;
 		@media(min-width: 576px){
-			height: getvwmob(19vw);
-			line-height: getvwmob(22vw);
+			// height: getvwmob(19vw);
+			// line-height: getvwmob(22vw);
 		}
 		@media(min-width: 768px){
 			margin-top: -2px;
@@ -171,14 +172,14 @@
 			height: 100%;
 		}
 		@media(min-width: 576px){
-			top: getvwmob(-8vw);
-			display: inline-block;
-			left: -26%;
+			// top: getvwmob(-8vw);
 		}
 		@media(min-width: 768px){
+			display: inline-block;
 			width: 2px;
 			height: 150px;
 			top: -8px;
+			left: -26%;
 		}
 		@media(min-width: 1282px){
 			width: getvw(2vw);
@@ -189,7 +190,8 @@
 	}
 	ul{
 		padding-left: 25%;
-		@media(min-width: 576px){
+		// @media(min-width: 576px){
+		@media(min-width: 768px){
 			padding-left: 0;
 		}
 	}
@@ -217,8 +219,8 @@
 			}
 		}
 		@media(min-width: 576px){
-			line-height: getvwmob(16vw);
-			height: getvwmob(13vw);
+			// line-height: getvwmob(16vw);
+			// height: getvwmob(13vw);
 		}
 		@media(min-width: 768px){
 			margin-bottom: 10px;
@@ -260,50 +262,36 @@
 			color: inherit;
 		}
 	}
-	@media(min-width: 576px){
-		font-size: getvwmob(12vw);
+
+	@media(min-width: 768px){
 		display: flex;
 		padding: 0;
-		margin-top: getvwmob(74vw);
-		h3{
-			font-size: getvwmob(12vw);
-			display: block;
-			line-height: getvwmob(14vw);
-			height: getvwmob(12vw);
-			margin-bottom: getvwmob(18vw);
-		}
-		.info-block{
-			width: 100%;
-			margin-left: 11.11%;
-			display: inline-block;
-			padding-left: getvwmob(5vw);
-			padding-right: getvwmob(5vw);
-			font-size: getvwmob(12vw);
-			&:nth-child(2){
-				padding-top: 0;
-			}
-			&:nth-child(3){
-				padding-top: 0;
-			}
-			a{
-				font-size: getvwmob(12vw);
-			}
-		}
-	}
-	@media(min-width: 768px){
 		font-size: 12px;
 		line-height: 17px;
 		margin-top: 74px;
 		h3{
+			display: block;
 			font-size: 12px;
 			line-height: 14px;
 			height: 12px;
 			margin-bottom: 18px;
 		}
 		.info-block{
+			width: 100%;
+			margin-left: 11.11%;
+			display: inline-block;
 			padding-left: 5px;
 			padding-right: 5px;
 			font-size: 12px;
+
+			&:nth-child(2){
+				padding-top: 0;
+			}
+			&:nth-child(3){
+				padding-top: 0;
+			}
+
+
 			a{
 				font-size: 12px;
 			}
