--- a/dev/scss/global/_vars.scss
+++ b/dev/scss/global/_vars.scss
@@ -17,6 +17,7 @@ $dark-brown: #7c5e3e;
 $brown: #ad976f;
 $light-brown: #cbbba2;
 $cream: #ffecd0;
+$light-cream: #ffc268;
 
 // Grid
 $snj-grid__maxWidth: 1212px;
