Responsive check: Contact Thanks ready, changed colors and tweaked social logos size.

--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -58,16 +58,16 @@
 	pointer-events:none;
 	
 	&.a{
-		width: getvw(8vw);
-		height: 100%;
+		width: 100%;
+		height: 48px;
 
 		top: 0;
 		left: 0;
 	}
 	
 	&.b{
-		width: getvw(5vw);
-		height: 100%;
+		width: 100%;
+		height: 38px;
 
 		top: 0;
 		left: 0;
