About UI: Dave timer pagination added.

--- a/dev/assets/_modules/about-slider-points.pug
+++ b/dev/assets/_modules/about-slider-points.pug
@@ -1,5 +1,11 @@
 nav.slider-wrapper
 	ul#about-slider-dots.slider-list
-		li.dot-slider.active.jb-cascade(data-cascade="fade-up" data-p-index=0)
+		li.dot-slider.jb-cascade(data-cascade="fade-up" data-p-index=0)
+			svg.svg-dot(viewBox="0 0 10 10")
+				circle.svg-ring.animate(cx="5" cy="5" r="4")
 		li.dot-slider.jb-cascade(data-cascade="fade-up" data-p-index=1)
+			svg.svg-dot(viewBox="0 0 10 10")
+				circle.svg-ring(cx="5" cy="5" r="4")
 		li.dot-slider.jb-cascade(data-cascade="fade-up" data-p-index=2)
+			svg.svg-dot(viewBox="0 0 10 10")
+				circle.svg-ring(cx="5" cy="5" r="4")
