--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -18,9 +18,9 @@
 			p.about-p This unique background of being founded and led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means that we have the same intensity for producing work that is authentic to the brand, and revered by its customers. 
 
 		.social-wrapper
-			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.linkedin.com/company/jungle-beige")
+			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.linkedin.com/company/jungle-beige" target="_blank" rel="nofollow noopener noreferrer")
 				+link-icon
-			a.social-link.jb-cascade(data-cascade="fade-up" href=tw)
+			a.social-link.jb-cascade(data-cascade="fade-up" href="https://twitter.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 				+tw-icon
-			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.instagram.com/junglebeige/")
+			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.instagram.com/junglebeige/" target="_blank" rel="nofollow noopener noreferrer")
 				+ins-icon
