--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -1,26 +1,33 @@
 extends _templates/layout.pug
+
+
 block preloader
 	//- .preloader.color-3
+
+
 block content
 	.message-section.snj-container-fluid.center-content
 		.row.center-margin
 			.center-wrapper.snj-col-9.offset-1.snj-col-md-8.offset-md-2.snj-col-lg-6.offset-lg-2
 				
 				h2.subtitle-block.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Get in touch.
+
 				//- form inputs
 				include _modules/inputs-form.pug
 
 				//- .arrow-container.jb-cascade(data-cascade="fade-right" data-cascade-delay-mobile="4" data-cascade-delay="4")
 				//- 	+arrow-right("/", "Send it")
 				.arrow-container.jb-cascade(data-cascade="fade-right" data-cascade-delay-mobile="4" data-cascade-delay="4")
-					.arrow-right
+					//- .arrow-right
 						.arrow-wrapper
 							.rectangle-arrow
 							+icon-arrow
 						span Send it
-					//- +arrow-right("/", "Send it")
+					+arrow-right("#", "Send it")
 
 	a.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
+
+
 block footer
 	+footer('')
