Power Horse project: Slider image pending added.

--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -37,7 +37,7 @@ block content
 				.p-photo2
 					img(src="./img/projects/power-horse/04_power.jpg", alt="")
 
-			+slider-projects("https://www.fillmurray.com/893/591", "./img/projects/power-horse/05_power.jpg", "./img/projects/power-horse/06_power.jpg", "./img/projects/power-horse/07_power.jpg", "", "", "", "")
+			+slider-projects("./img/projects/power-horse/05_power.gif", "./img/projects/power-horse/06_power.jpg", "./img/projects/power-horse/07_power.jpg", "./img/projects/power-horse/08_power.jpg", "", "", "", "")
 			
 
 			section.video-wrapper.powerhorse-video-mini.snj-col-12
