Standardizing UI hover animations with Dave values or as closes as it can; menu buttons, our work button and home title ready.

--- a/dev/scss/global/_animations.scss
+++ b/dev/scss/global/_animations.scss
@@ -1,7 +1,7 @@
 // Configuración general
 [data-cascade]{
 	animation-duration: $duration_inview;
-	animation-timing-function: $easeOutQuint;
+	animation-timing-function: cubic-bezier(.21,0,0,1);
 	animation-fill-mode: both;
 	opacity: 0;
 }
