--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -1,8 +1,8 @@
 //navigation button
 @-webkit-keyframes fade-up-btn {
-	0%{margin-top: getvwmob(50vw);opacity: 0;}
-	48% {margin-top: getvwmob(50vw);}
-	100% {margin-top: 0;opacity: 1;}
+	0%{margin-top: getvwmob(50vw); color: $black;}
+	
+	100% {margin-top: 0;opacity: 1; color: $black;}
 }
 
 // Center btn navigation
@@ -79,7 +79,7 @@
 	0%{
 		opacity: 1;
 	}
-	30%,70%{
+	30%{
 		opacity: 0;
 		transform: translateY(getvwmob(26vw));
 		animation-delay: 800ms;
@@ -105,9 +105,9 @@
 @media(min-width: 768px){
 	// navigation button
 	@-webkit-keyframes fade-up-btn {
-		0%{margin-top: 50px;opacity: 0;}
-		48% {margin-top: 50px;}
-		100% {margin-top: 0;opacity: 1;}
+		0%{margin-top: 50px; color: $black;}
+		
+		100% {margin-top: 0;opacity: 1; color: $black;}
 	}
 
 	// keyframes de entrada
@@ -137,7 +137,7 @@
 		0%{
 			opacity: 1;
 		}
-		30%,70%{
+		30%{
 			opacity: 0;
 			transform: translateY(26px);
 			animation-delay: 800ms;
@@ -163,9 +163,9 @@
 
 	//navigation button
 	@-webkit-keyframes fade-up-btn {
-		0%{margin-top: getvw(50vw);opacity: 0;}
-		48% {margin-top: getvw(50vw);}
-		100% {margin-top: 0;opacity: 1;}
+		0%{margin-top: getvw(50vw); color: $black;}
+		
+		100% {margin-top: 0;opacity: 1; color: $black;}
 	}
 
 	// Keyframes De entrada
@@ -196,7 +196,7 @@
 		0%{
 			opacity: 1;
 		}
-		30%,70%{
+		30%{
 			opacity: 0;
 			transform: translateY(getvw(26vw));
 			animation-delay: 800ms;
