--- a/dev/scss/global/_keyframes.scss
+++ b/dev/scss/global/_keyframes.scss
@@ -54,23 +54,23 @@
 }
 //right box translate
 @-webkit-keyframes translate-right {
-	0% {transform:translateX(getvwmob(-30px));}
+	0% {transform:translateX(getvwmob(-30px));opacity: 0;}
 	100% {transform:translateX(0);opacity: 1}
 }
 //left box translate
 @-webkit-keyframes translate-left {
-	0% {transform:translateX(getvwmob(30vw));}
+	0% {transform:translateX(getvwmob(30vw));opacity: 0;}
 	100% {opacity: 1}
 }
 
 // arrow line 
 @-webkit-keyframes editRectArrow {
-	0% {width: calc(100%); opacity: .01;}
+	0% {width: 100%; opacity: .01;}
 	100% {opacity: 1}
 }
 
 @keyframes editRectArrow {
-	0% {width: calc(100%); opacity: .01;}
+	0% {width: 100%; opacity: .01;}
 	100% {opacity: 1}
 }
 
@@ -126,11 +126,11 @@
 		100% {opacity: 1; animation-fill-mode:forwards;}
 	}
 	@-webkit-keyframes translate-right {
-		0% {transform:translateX(-30px);}
+		0% {transform:translateX(-30px);opacity: 0;}
 		100% {transform:translateX(0);opacity: 1}
 	}
 	@-webkit-keyframes translate-left {
-		0% {transform:translateX(30px);}
+		0% {transform:translateX(30px);opacity: 0;}
 		100% {opacity: 1}
 	}
 	@keyframes display-text{
@@ -184,11 +184,11 @@
 		100% {opacity: 1; animation-fill-mode:forwards;}
 	}
 	@-webkit-keyframes translate-right {
-		0% {transform:translateX(getvw(-30vw));}
+		0% {transform:translateX(getvw(-30vw));opacity: 0;}
 		100% {transform:translateX(0);opacity: 1}
 	}
 	@-webkit-keyframes translate-left {
-		0% {transform:translateX(getvw(30vw));}
+		0% {transform:translateX(getvw(30vw));opacity: 0;}
 		100% {opacity: 1}
 	}
 
