--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -68,6 +68,7 @@
 		position: relative;
 		display: inline-block;
 		cursor: auto;
+
 		.title-block{
 			margin-bottom: getvwmob(15vw);
 			letter-spacing: .02em;
@@ -87,6 +88,7 @@
 			.subtitle-block{
 				line-height: 24px;
 				height: 20px;
+				pointer-events: none;
 			}
 		}
 
@@ -100,7 +102,6 @@
 				position: absolute;
 				top: -33px;
 				left: -96px;
-				pointer-events: none;
 			}
 		}
 		@media(min-width: 1282px){
@@ -117,15 +118,16 @@
 		}
 		&:hover{
 			.display-text{
-				-webkit-animation: display-text .5s cubic-bezier(.25,0,0,.15);
-				animation: display-text .5s cubic-bezier(.25,0,0,.15);
-				animation-fill-mode: forwards;
+				-webkit-animation: display-text .7s cubic-bezier(.21,0,0,1) forwards;
+				animation: display-text .7s cubic-bezier(.21,0,0,1) forwards;
+
 				&:nth-child(1){animation-delay:0ms;}
 				&:nth-child(2){animation-delay:50ms;}
 				&:nth-child(3){animation-delay:100ms;}
+
 				@media(min-width: 768px){
-					&:nth-child(1){animation-delay:50ms;}
-					&:nth-child(2){animation-delay:100ms;}
+					&:nth-child(1){animation-delay:100ms;}
+					&:nth-child(2){animation-delay:50ms;}
 					&:nth-child(3){animation-delay:0;}
 				}
 			}
