--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -56,9 +56,6 @@ html(class='no-js')
 			//- img(src="img/testing/thanks_desk.jpg", alt="")
 
 
-
-
-			
 			//- mobile
 			//- img(src="img/testing/menu_mob.jpg", alt="")
 			//- img(src="img/testing/home_mob.jpg", alt="")
@@ -74,9 +71,13 @@ html(class='no-js')
 
 
 		//- content
+		block preloader
+			#preload_intro.preloader.color-1
+			#preload_outro.preloader.color-1
+
 		#main-wrapper
-			block preloader
 			block content
+
 		block footer
 
 		//- scripts
