--- a/dev/scss/modules/_preloader.scss
+++ b/dev/scss/modules/_preloader.scss
@@ -1,22 +1,38 @@
 .preloader{
+	z-index: 99999;
 	position: fixed;
 	bottom: 0;
 	right: 0;
 	width: 100%;
 	height: 100%;
 	display: block;
-	z-index: 1000;
-}
+	@include transform-origin(center, bottom);
 
-// preloder dependiendo de la sección
-// brown
-.color-1{background-color: #302c28;}
-// gray
-.color-2{background-color: $gray;}
-// caqui
-.color-3{background-color: #ad976f;}
-// yellow
-.color-4{background-color: #ffb342;}
+	// preloder dependiendo de la sección
+	&.color-1{background-color: $black;}
+	&.color-2{background-color: $gray;}
+	&.color-3{background-color: $brown;}
+	&.color-4{background-color: $light-orange;}
+
+	&#preload_intro{
+		@include transitions-ease(.5s);
+
+		&.hide{
+			opacity: 0;
+			visibility: hidden;
+			pointer-events: none;
+		}
+	}
+
+	&#preload_outro{
+		@include translate3d(0, 100%, 0);
+
+		&.show{
+			@include transitions-ease(.7s);
+			@include translate3d(0, 0, 0);
+		}
+	}
+}
 
 .preloader.preloader-cut{
 	width: calc(83.34% - 32px)
